--- a/styles/dark.css
+++ b/styles/dark.css
@@ -1,16 +1,14 @@
-/*
-  Специально для тёмной темы при наличии класса,
-  здесь окажутся стили, которые нужно переопределить принудительно,
-  переключая тему
-*/
-
 :root.theme-dark {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
+  --background-image: url(../images/cover-image-dark.png);
+  --background-color: #000028;
+  --decor-color: #ff0070;
+  --accent-color: #ff0070;
+  --hover-color: #ff007066;
+  --main-title-color: #db00ff;
+  --title-color: #000028;
+  --text-color: #f1b2ce;
 }
 
-.theme-dark .page {
-  /* Вам также нужно будет написать ряд подобных селекторов */
+.theme-dark .header__decor {
+  display: flex;
 }
