--- a/styles/light.css
+++ b/styles/light.css
@@ -1,16 +1,31 @@
-/*
-  Специально для светлой темы при наличии класса.
-  Здесь окажутся стили, которые нужно переопределить принудительно,
-  переключая тему
-*/
-
 :root.theme-light {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
+  --background-image: url(../images/cover-image-light.png);
+  --background-color: #fff1f7;
+  --decor-color: #353430;
+  --accent-color: #ff8dcb;
+  --hover-color: #32312d66;
+  --main-title-color: #ffc2e6;
+  --title-color: #353430;
+  --text-color: #353430;
 }
 
-.theme-light .page {
-  /* Вам также нужно будет написать ряд подобных селекторов */
+.theme-light .header__decor {
+  display: none;
+}
+
+@media (prefers-color-scheme: light) {
+  :root {
+    --background-image: url(../images/cover-image-light.png);
+    --background-color: #fff1f7;
+    --decor-color: #353430;
+    --accent-color: #ff8dcb;
+    --hover-color: #32312d66;
+    --main-title-color: #ffc2e6;
+    --title-color: #353430;
+    --text-color: #353430;
+  }
+
+  .header__decor {
+    display: none;
+  }
 }
